[project]
name = "task-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Phil Samoei", email = "phil@samphiltech.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "typer[all]>=0.20.0",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
